[package]
name = "btcpay"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
license = "MIT"
homepage = "https://github.com/afilini/rust-btcpay"
repository = "https://github.com/afilini/rust-btcpay"
documentation = "https://docs.rs/btcpay"
description = "Rust BTCPayServer client"
keywords = ["btcpay", "btcpayserver", "bitcoin", "bitpay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.23", features = ["rand"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_urlencoded = { version = "^0.6" }
reqwest = { version = "0.10", features = ["json"] }
regex = "1"

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "macros"] }
