[package]
name = "btcpay"
version = "0.2.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
license = "MIT"
homepage = "https://github.com/afilini/rust-btcpay"
repository = "https://github.com/afilini/rust-btcpay"
documentation = "https://docs.rs/btcpay"
description = "Rust BTCPayServer client"
keywords = ["btcpay", "btcpayserver", "bitcoin", "bitpay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30", features = ["rand"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_urlencoded = { version = "^0.7" }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
